acho que é tudo

--- a/Redes Neurais/Projetao/preparando_dados.ipynb
+++ b/Redes Neurais/Projetao/preparando_dados.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,46 +22,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 Personagem  Quantidade de Imagens\n",
-      "0             homer_simpson                   2246\n",
-      "1              ned_flanders                   1454\n",
-      "2               moe_szyslak                   1452\n",
-      "3              lisa_simpson                   1354\n",
-      "4              bart_simpson                   1342\n",
-      "5             marge_simpson                   1291\n",
-      "6          krusty_the_clown                   1206\n",
-      "7         principal_skinner                   1194\n",
-      "8  charles_montgomery_burns                   1193\n",
-      "9       milhouse_van_houten                   1079\n"
+      "                  Personagem  Quantidade de Imagens\n",
+      "0              homer_simpson                   2246\n",
+      "1               ned_flanders                   1454\n",
+      "2                moe_szyslak                   1452\n",
+      "3               lisa_simpson                   1354\n",
+      "4               bart_simpson                   1342\n",
+      "5              marge_simpson                   1291\n",
+      "6           krusty_the_clown                   1206\n",
+      "7          principal_skinner                   1194\n",
+      "8   charles_montgomery_burns                   1193\n",
+      "9        milhouse_van_houten                   1079\n",
+      "10              chief_wiggum                    986\n",
+      "11    abraham_grampa_simpson                    913\n",
+      "12              sideshow_bob                    877\n",
+      "13    apu_nahasapeemapetilon                    623\n",
+      "14             kent_brockman                    498\n",
+      "15            comic_book_guy                    469\n",
+      "16            edna_krabappel                    457\n",
+      "17              nelson_muntz                    358\n",
+      "18             lenny_leonard                    310\n",
+      "19              mayor_quimby                    246\n",
+      "Soma total da quantidade de fotos: 19548\n"
      ]
     }
    ],
    "source": [
-    "# Diretório onde estão as pastas dos personagens\n",
     "diretorio_base_treino = r'C:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Projetao\\simpsons_dataset'\n",
+    "diretorio_base_teste = r'C:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Projetao\\simpson_testset'\n",
     "\n",
-    "# Obtendo todas as subpastas (personagens) e seus nomes\n",
-    "subpastas = [(f.path, f.name) for f in os.scandir(diretorio_base_treino) if f.is_dir()]\n",
+    "# Obtendo todas as subpastas (personagens) e seus nomes do diretório de treinamento\n",
+    "subpastas_treino = [(f.path, f.name) for f in os.scandir(diretorio_base_treino) if f.is_dir()]\n",
+    "\n",
+    "# Obtendo todas as subpastas (personagens) e seus nomes do diretório de teste\n",
+    "subpastas_teste = [(f.path, f.name) for f in os.scandir(diretorio_base_teste) if f.is_dir()]\n",
+    "nomes_pastas_teste = [nome_pasta for _, nome_pasta in subpastas_teste]\n",
     "\n",
     "contagem_imagens_por_personagem = {}\n",
-    "for subpasta, nome_pasta in subpastas:\n",
+    "total_de_imagens = 0\n",
+    "for subpasta, nome_pasta in subpastas_treino:\n",
     "    arquivos = os.listdir(subpasta)\n",
-    "    contagem_imagens_por_personagem[nome_pasta] = len([arquivo for arquivo in arquivos if arquivo.endswith('.jpg') or arquivo.endswith('.png')])\n",
+    "    if nome_pasta in nomes_pastas_teste:\n",
+    "        contagem_imagens_por_personagem[nome_pasta] = len([arquivo for arquivo in arquivos if arquivo.endswith('.jpg') or arquivo.endswith('.png')])\n",
+    "        total_de_imagens += contagem_imagens_por_personagem[nome_pasta]\n",
     "\n",
     "# Ordenar as subpastas pelos números de imagens e pegar os 10 primeiros\n",
-    "top_10_personagens = Counter(contagem_imagens_por_personagem).most_common(10)\n",
+    "top_10_personagens = Counter(contagem_imagens_por_personagem).most_common(20)\n",
     "\n",
     "df = pd.DataFrame(top_10_personagens, columns=['Personagem', 'Quantidade de Imagens'])\n",
     "\n",
-    "\n",
-    "print(df)\n"
+    "print(df)\n",
+    "print(\"Soma total da quantidade de fotos:\", total_de_imagens)\n"
    ]
   },
   {
@@ -76,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +128,15 @@
     "                # Salvar a imagem rotacionada\n",
     "                caminho_destino_imagem_rotacionada = os.path.join(caminho_destino, f'{personagem}_{arquivo[:-4]}_rot{angulo}.jpg')\n",
     "                cv2.imwrite(caminho_destino_imagem_rotacionada, imagem_rotacionada_redimensionada)\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Diretório onde estão as pastas dos personagens\n",
     "diretorio_base_treino = r'C:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Projetao\\simpsons_dataset'\n",
     "\n",
@@ -128,7 +153,7 @@
     "        caminho_destino_personagem = os.path.join(caminho_destino, personagem)\n",
     "        os.makedirs(caminho_destino_personagem, exist_ok=True)\n",
     "\n",
-    "        redimensionar_e_rotacionar_imagens(diretorio_pasta, personagem, caminho_destino_personagem)\n"
+    "        redimensionar_e_rotacionar_imagens(diretorio_pasta, personagem, caminho_destino_personagem)"
    ]
   },
   {
@@ -140,12 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Diretório onde estão as imagens misturadas\n",
-    "diretorio_base = r'C:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Projetao\\kaggle_simpson_testset'\n",
+    "diretorio_base = r'C:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Projetao\\simpson_testset'\n",
     "\n",
     "# Criar uma lista de todos os personagens presentes nas imagens\n",
     "personagens = set()\n",
@@ -188,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,29 +247,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 Personagem  Quantidade de Imagens\n",
-      "0             homer_simpson                   6738\n",
-      "1              ned_flanders                   4362\n",
-      "2               moe_szyslak                   4356\n",
-      "3              lisa_simpson                   4062\n",
-      "4              bart_simpson                   4026\n",
-      "5             marge_simpson                   3873\n",
-      "6          krusty_the_clown                   3618\n",
-      "7         principal_skinner                   3582\n",
-      "8  charles_montgomery_burns                   3579\n",
-      "9       milhouse_van_houten                   3237\n"
+      "                  Personagem  Quantidade de Imagens\n",
+      "0              homer_simpson                   6738\n",
+      "1               ned_flanders                   4362\n",
+      "2                moe_szyslak                   4356\n",
+      "3               lisa_simpson                   4062\n",
+      "4               bart_simpson                   4026\n",
+      "5              marge_simpson                   3873\n",
+      "6           krusty_the_clown                   3618\n",
+      "7          principal_skinner                   3582\n",
+      "8   charles_montgomery_burns                   3579\n",
+      "9        milhouse_van_houten                   3237\n",
+      "10              chief_wiggum                   2958\n",
+      "11    abraham_grampa_simpson                   2739\n",
+      "12              sideshow_bob                   2631\n",
+      "13    apu_nahasapeemapetilon                   1869\n",
+      "14             kent_brockman                   1494\n",
+      "15            comic_book_guy                   1407\n",
+      "16            edna_krabappel                   1371\n",
+      "17              nelson_muntz                   1074\n",
+      "18             lenny_leonard                    930\n",
+      "19              mayor_quimby                    738\n",
+      "Soma total da quantidade de imagens: 58644\n"
      ]
     }
    ],
    "source": [
-    "# Diretório onde estão as pastas dos personagens\n",
+    "import os\n",
+    "from collections import Counter\n",
+    "import pandas as pd\n",
+    "\n",
     "diretorio_base_treino = r'C:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Projetao\\dataset_treino'\n",
     "\n",
     "# Obtendo todas as subpastas (personagens) e seus nomes\n",
@@ -252,18 +291,24 @@
     "\n",
     "# Contagem de imagens em cada subpasta\n",
     "contagem_imagens_por_personagem = {}\n",
+    "total_imagens = 0\n",
     "for subpasta, nome_pasta in subpastas:\n",
     "    arquivos = os.listdir(subpasta)\n",
-    "    contagem_imagens_por_personagem[nome_pasta] = len([arquivo for arquivo in arquivos if arquivo.endswith('.jpg') or arquivo.endswith('.png')])\n",
+    "    contagem_imagens = len([arquivo for arquivo in arquivos if arquivo.endswith('.jpg') or arquivo.endswith('.png')])\n",
+    "    contagem_imagens_por_personagem[nome_pasta] = contagem_imagens\n",
+    "    total_imagens += contagem_imagens\n",
     "\n",
     "# Ordenar as subpastas pelos números de imagens e pegar os 10 primeiros\n",
-    "top_10_personagens = Counter(contagem_imagens_por_personagem).most_common(10)\n",
+    "top_10_personagens = Counter(contagem_imagens_por_personagem).most_common(20)\n",
     "\n",
     "# Criar DataFrame pandas\n",
     "df = pd.DataFrame(top_10_personagens, columns=['Personagem', 'Quantidade de Imagens'])\n",
     "\n",
     "# Exibir DataFrame como tabela\n",
-    "print(df)\n"
+    "print(df)\n",
+    "\n",
+    "# Mostrar a soma total\n",
+    "print(\"Soma total da quantidade de imagens:\", total_imagens)\n"
    ]
   }
  ],
