--- a/Redes Neurais/Projetao/Modelos_CNN.ipynb
+++ b/Redes Neurais/Projetao/Modelos_CNN.ipynb
@@ -9,8 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -36,8 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "diretorio_treino = \"C:\\\\Users\\\\Pichau\\\\Desktop\\\\Faculdade\\\\Projects\\\\Facul Repositorios\\\\Repositorios_Universitarios\\\\Redes Neurais\\\\Projetao\\\\dataset_treino\" # caminho direto\n",
@@ -60,8 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
@@ -82,9 +94,17 @@
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.fc2(x)\n",
     "        return x\n",
-    "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
+    "    \n",
+    "    \n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "vgg16 = models.vgg16(pretrained=True).to(device)\n",
     "resnet = models.resnet18(pretrained=True).to(device)\n",
     "densenet = models.densenet121(pretrained=True).to(device)\n",
@@ -103,8 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "# Função para calcular a acurácia\n",
@@ -117,8 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "def treinar_modelo(modelo, otimizador, loader, criterio, num_epocas, nome_modelo):\n",
@@ -373,8 +401,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "# Função para mostrar imagens com seus rótulos e previsões para um modelo específico\n",
@@ -514,7 +546,11 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -535,7 +571,11 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -574,6 +614,16 @@
     "\n",
     "cnn = CNN(num_classes=len(dados_treino.classes)).to(device)\n",
     "cnn.load_state_dict(torch.load('redes/cnn.pth'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn = CNN(num_classes=len(dados_treino.classes)).to(device)\n",
+    "cnn.load_state_dict(torch.load('redes/cnn.pth'))"
    ]
   }
  ],
