--- a/Redes Neurais/Projetao/preparando_dados.ipynb
+++ b/Redes Neurais/Projetao/preparando_dados.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -255,27 +255,27 @@
      "output_type": "stream",
      "text": [
       "                  Personagem  Quantidade de Imagens\n",
-      "0              homer_simpson                   6738\n",
-      "1               ned_flanders                   4362\n",
-      "2                moe_szyslak                   4356\n",
-      "3               lisa_simpson                   4062\n",
-      "4               bart_simpson                   4026\n",
-      "5              marge_simpson                   3873\n",
-      "6           krusty_the_clown                   3618\n",
-      "7          principal_skinner                   3582\n",
-      "8   charles_montgomery_burns                   3579\n",
-      "9        milhouse_van_houten                   3237\n",
-      "10              chief_wiggum                   2958\n",
-      "11    abraham_grampa_simpson                   2739\n",
-      "12              sideshow_bob                   2631\n",
-      "13    apu_nahasapeemapetilon                   1869\n",
-      "14             kent_brockman                   1494\n",
-      "15            comic_book_guy                   1407\n",
-      "16            edna_krabappel                   1371\n",
-      "17              nelson_muntz                   1074\n",
-      "18             lenny_leonard                    930\n",
-      "19              mayor_quimby                    738\n",
-      "Soma total da quantidade de imagens: 58644\n"
+      "0     apu_nahasapeemapetilon                    150\n",
+      "1               bart_simpson                    150\n",
+      "2               chief_wiggum                    150\n",
+      "3             edna_krabappel                    150\n",
+      "4              homer_simpson                    150\n",
+      "5              kent_brockman                    150\n",
+      "6           krusty_the_clown                    150\n",
+      "7              lenny_leonard                    150\n",
+      "8               lisa_simpson                    150\n",
+      "9              marge_simpson                    150\n",
+      "10              mayor_quimby                    150\n",
+      "11               moe_szyslak                    150\n",
+      "12              nelson_muntz                    150\n",
+      "13         principal_skinner                    150\n",
+      "14            comic_book_guy                    147\n",
+      "15       milhouse_van_houten                    147\n",
+      "16              ned_flanders                    147\n",
+      "17    abraham_grampa_simpson                    144\n",
+      "18  charles_montgomery_burns                    144\n",
+      "19              sideshow_bob                    141\n",
+      "Soma total da quantidade de imagens: 2970\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
     "from collections import Counter\n",
     "import pandas as pd\n",
     "\n",
-    "diretorio_base_treino = r'C:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Projetao\\dataset_treino'\n",
+    "diretorio_base_treino = r'C:\\Users\\Pichau\\Desktop\\Faculdade\\Projects\\Facul Repositorios\\Repositorios_Universitarios\\Redes Neurais\\Projetao\\testset_simpsons'\n",
     "\n",
     "# Obtendo todas as subpastas (personagens) e seus nomes\n",
     "subpastas = [(f.path, f.name) for f in os.scandir(diretorio_base_treino) if f.is_dir()]\n",
